# NNDL_OmenLogic

./: Dockerfile  pyproject.toml
Training_dataset/: customers.js  database.json
src/omenlogic/: __init__.py  main.py
src/omenlogic/static/: script.js  style.css
src/omenlogic/views/: index.html
